loopfor.LoopCourseForest.scala.error
Erreur de compilation :
LoopCourseForest:3: error: value to28 is not a member of Int
for(j<- 1 to28){
          ^