loopfor.LoopCourseForest.scala.code
var tour=0
var qtour=0
for(j<- 1 to28){
  for (i<- 1 to 4){
    avance()
  }
  gauche()
  for (i <- 1 to 2){
    avance()
  }
  droite()
  for (i<- 1 to 4){
    avance()
  }
  droite()
  for (i<- 1 to 2){
    avance()
  }
  gauche()
  for (i<- 1 to 4){
    avance()
  }
  gauche()
}